# desktop-automations

./: .gitignore  CODEOWNERS  README.md
cef-screen/: .gitignore  README.md  cef-screen.bat  pyproject.toml
cef-screen/cef_screener/: __init__.py  cache.py  cli.py  config.py  engine.py  ingest.py  metrics.py  news.py  portfolio.py  rules.py  scoring.py  web.py
cef-screen/tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_engine.py  test_ingest.py  test_metrics.py  test_news.py  test_portfolio.py  test_rules.py  test_scoring.py  test_web.py
copilot-dashboard/: CopilotDashboard.vbs  collect_data.py  dashboard.html  e2e_tests.py  launch.py  session_manager.py  setup-scheduled-task.ps1
coreidentity-autoextend/: README.md  dashboard.html  dashboard_server.py  renew_entitlements.py  test_renew_entitlements.py
course-workflow/: dashboard.html  dashboard_server.py
daily-planner/: .gitignore  _jscheck.js  app.html  e2e_tests.py  prompts.md  server.py  todo-data.js
email-digest/: dashboard.html  email_digest.py
hub/: automations.json  hub_server.py  index.html  launch.html  open-dashboard.bat  skills.html  skills.json
openclaw-meni/: README.md  dashboard.html  dashboard_server.py
pipeline-dashboard/: ado_client.py  dashboard.html  e2e_tests.py  pipeline_dashboard.py  pipeline_data.example.json
pr-reviewer/: ado_pr_client.py  ai_reviewer.py  dashboard.html  e2e_tests.py  learnings.json  pr_reviewer_server.py  review_config.json
realestate-finder/: dashboard.html  dashboard_server.py
status-dashboard/: dashboard.html  status_dashboard.py  (+1 more)
(+6 files in other folders)
