[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cef-screener"
version = "0.1.0"
description = "Quantitative screener for U.S. Closed-End Funds — CEFConnect ingestion + asymmetric scoring + Flask dashboard"
requires-python = ">=3.11"
authors = [{ name = "Oren Horowitz" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
cef-screen = "cef_screener.cli:main"

[tool.setuptools]
packages = ["cef_screener"]

[tool.setuptools.package-data]
cef_screener = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["cef_screener"]
branch = false
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
